welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:12: error: not found: value to
			case 0 to 2 => droite()
                               ^Poucet:13: error: not found: value to
			case 3 to 52 => gauche()
                               ^