welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var nbB = 0
while (!sortieTrouvee()){
	do{
	avance()
	} while (croisement())
	if (estSurBiscuit()){
		nbB = nbB + 1 
	}
	if (croisement()){
		nbB match{
			case 0 to 2 => droite()
			case 3 to 52 => gauche()
		}
		
	}
}



